
For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


Version 0.4.3 (under dev!)
--------------------------

* core: add options to customize default text search in buffers:
  weechat.look.buffer_search_{case_sensitive|force_default|regex|where}
* irc: add server option "default_msg_kick" to customize default kick/kickban
  message (task #12777)

Version 0.4.2 (2013-10-06)
--------------------------

* core: clear whole line before displaying content instead of clearing after
  the end of content (bug #40115)
* core: fix time displayed in status bar (it was one second late) (bug #40097)
* core: fix memory leak on unhook of a print hook (if using tags)
* core: fix computation of columns in output of /help (take care about size of
  time/buffer/prefix)
* core: display day change message dynamically (do not store it as a line in
  buffer), split option weechat.look.day_change_time_format into two options
  weechat.look.day_change_message_{1date|2dates}, new option
  weechat.color.chat_day_change (task #12775)
* core: add syntax "@buffer:item" in bar items to force the buffer used when
  displaying the bar item (task #12717)
* core: add search of regular expression in buffer, don't reset search type on
  a new search, select where to search (messages/prefixes), add keys in search
  context: alt+"c" (case (in)sensitive search), tab (search in
  messages/prefixes)
* core: add text emphasis in messages when searching text in buffer, new
  options: weechat.look.emphasized_attributes, weechat.color.emphasized,
  weechat.color.emphasized_bg
* core: fix random crash on "/buffer close" with a buffer number (or a range of
  buffers)
* core: optimize the removal of lines in buffers (a lot faster to clear/close
  buffers with lot of lines)
* core: change color format for options weechat.look.buffer_time_format and