@@ -135,6 +135,7 @@ extern struct t_config_option *irc_config_look_nick_mode;
 extern struct t_config_option *irc_config_look_nick_mode_empty;
 extern struct t_config_option *irc_config_look_notice_as_pv;
 extern struct t_config_option *irc_config_look_notice_welcome_redirect;
+extern struct t_config_option *irc_config_look_notice_welcome_tags;
 extern struct t_config_option *irc_config_look_notify_tags_ison;
 extern struct t_config_option *irc_config_look_notify_tags_whois;
 extern struct t_config_option *irc_config_look_part_closes_buffer;
